2015-08-27  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-289

	* arts/controlfiles/instruments/ismar: Removed this folder. The
	MetMM system should be used for ISMAR, MARSS and DEIMOS. The files
	were anyhow not up to date and caused some confusion.

2015-08-26  Richard Larsson <ric.larsson@gmail.com>

	* arts-2-3-288
	
	* src/methods.cc:  Fixed typo.  Partition functions do not (yet) have to
	be checked agains t_nlte_field but rather to t_field.  Patrick, thank 
	you for noticing this error.

2015-08-25  Jana Mendrok  <jana.mendrok@ltu.se>

	* arts-2-3-287

	* src/continua.cc: Corrected validity range values for MPM93 cloud
	absorption continua.

	* src/m_abs_lookup.cc (find_nonlinear_species):
	Be more specific in setting liquidcloud continua as linear abs species.

	* src/workspace.cc (iy_unit):
	Give some examples on the radiative methods meant.

2015-08-24  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-286

	* src/methods.cc:

	Add verbosity as input to verbosityInit and verbositySet. Usually, init
	functions only produce output. Verbosity is a special case because
	the workspace engine sets a flag in the Verbosity object whether we're
	inside the main agenda or not. This partial initialization has to be
	preserved when calling verbosityInit/Set. Problem became visible
	because of the changes in arts-2-3-279. Bug reported by Patrick.

2015-08-24  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-285

	* doc/uguide/check_refs.py:

	Fix the py3k fix. It wasn't working properly on all configurations.

2015-08-24  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-284

	* controlfiles/general/continua.arts, src/continua.{cc,h},
	src/partition_function_data.cc, src/species_data.cc:

	Added Ellison 07 continuum. Implementation provided by Stuart Fox.

2015-08-21  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-283

	* src/m_ppath.cc (geo_posEndOfPpath)
	(geo_posLowestAltitudeOfPpath, geo_posWherePpathPassesZref): Did