@@ -1,3 +1,14 @@
+2015-08-27  Oliver Lemke  <olemke@core-dump.info>
+
+	* arts-2-3-290
+
+	* src/m_abs.cc (abs_linesReadFromHitran):
+
+	Don't require the full catalog filename to match
+	hitran2012.par/hitran08.par. Only require that it starts with
+	hitran2012/hitran08 (case insensitive). Change proposed by Patrick to
+	make it easier to read custom catalogs.
+
 2015-08-27  Patrick Eriksson  <patrick.eriksson@chalmers.se>
 
 	* arts-2-3-289
